  media (Yan and Sava)
* jsg/flat: Predictive painting of 3-D seismic volumes (Fomel)

To SCons:
* Upgraded to scons-2.0.1

To documentation:
* Update to vplot man pages
* This file (NEWS.txt)

To APIs:
* New, improved Java API: Cleaner, independent from Mines JTK. Not
compatible with the old API

To the Python package:
* rsf.user.ivlad: chk_file_r, getppout, get1st functions
* rsf.user.m8rex: WrongPath exception class
* rsf.user.sf: attr function

To programs:
* sflmo (frequency-domain LMO)
* sfcp - added functionality to act as a filter
* sftaupmo - added functionality for effective/interval velocities
* sfktmig (prestack time migration
* sfrotate - added functionality for negative rotations
* sfmedian (median on the first axis)
* sfregr (linear regression)
* sfsvd (SVD using scipy)
* sfthreedcube (3D display using mayavi2)

BUG FIXES:

In the reproducible documents collection:
* Cross-platform (Linux/Mac) solution in book/jsg/flat/*/SConstruct
* Fixed program links in book/bei/fdm and book/bei/ft1
* Fixed program links in book/gee/ajt and book/gee/hlx
* High-resolution figures in book/gee/hlx

In documentation:
* Update of html/txt/spec documentation and man pages triggered by
  changes in programs or examples through dependence on use.py
* Show y and n for boolean parameters in F90 programs, instead of .true./.false.
* Show y and n for boolean params in some Python programs instead of True/False
    (fix for some cases in which existing mechanism did not work) 

In APIs:
* Appropriate flags for compilation on OpenSolaris
* Fixed memory leak in getpar.c
* Fixed memory leak in llist.c
* Improved accuracy of triangle smoothing
* Updated numpy interface in m8r.i

In the Python package:
* In rsf.user.ivlad (function ndims)
* In rsf.user.ooio (init of class RSFheader)
* CUDA configuration moved to configure.py

In programs:
* sfbandpass
* sfzcp
* sfstretch - proper handling of half-offset
* sfslant and sfvelcon - proper antialiasing

