@@ -48,6 +48,7 @@ To programs:
 * sfregr (linear regression)
 * sfsvd (SVD using scipy)
 * sfthreedcube (3D display using mayavi2)
+* sfiphase -added complex option
 
 BUG FIXES:
 
